opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/sexp"
bug-reports: "https://github.com/janestreet/sexp/issues"
dev-repo: "git+https://github.com/janestreet/sexp.git"
license: "MIT"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "async"
  "core"
  "core_kernel"
  "csvfields"
  "ppx_jane"
  "re2"
  "sexp_pretty"
  "sexplib"
  "jbuilder"                {build & >= "1.0+beta18.1"}
  "ocaml-migrate-parsetree" {>= "1.0"}
  "ppxlib"                  {>= "0.1.0"}
]
available: [ ocaml-version >= "4.06.1" ]
descr: "
S-expression swiss knife

A suite of tools for working with s-expressions from the command line.
It contains subcommands for pretty printing, querying, and modifying
sexps, as well as some conversions to and from other formats.
"
