opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/sexp"
bug-reports: "https://github.com/janestreet/sexp/issues"
dev-repo: "git+https://github.com/janestreet/sexp.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/sexp/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "async"
  "base"
  "core"
  "core_kernel"
  "core_unix"
  "csvfields"
  "jsonaf"
  "parsexp"
  "ppx_jane"
  "re2"
  "sexp_diff"
  "sexp_macro"
  "sexp_pretty"
  "sexp_select"
  "sexplib"
  "shell"
  "angstrom"    {>= "0.15.0"}
  "dune"        {>= "3.17.0"}
  "uri"         {>= "3.0.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "S-expression swiss knife"
description: "
A suite of tools for working with s-expressions from the command line.
It contains subcommands for pretty printing, querying, and modifying
sexps, as well as some conversions to and from other formats.
"
